src/syntax/parse/snapshots/dilaria__syntax__parse__test__unary__neg.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
UnaryOp(
    UnaryOp {
        span: Span(
            0..0,
        ),
        expr: Literal(
            Number(
                10.0,
                Span(
                    0..0,
                ),
            ),
        ),
        kind: Neg,
    },
)
