src/syntax/parse/snapshots/dilaria__syntax__parse__test__unary__not.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
UnaryOp(
    UnaryOp {
        span: Span(
            0..0,
        ),
        expr: Literal(
            Boolean(
                true,
                Span(
                    0..0,
                ),
            ),
        ),
        kind: Not,
    },
)
