src/syntax/parse/snapshots/dilaria__syntax__parse__test__unary__number_literal.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Literal(
    Number(
        10.0,
        Span(
            0..0,
        ),
    ),
)
